--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.2",
     "axios": "^0.26.1",
     "json-server-auth": "^2.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-hook-form": "^7.30.0",
+    "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
+    "redux-persist": "^6.0.0",
     "toastr": "^2.1.4"
   },
   "devDependencies": {
